# Real-Steel

./: .gitignore  .gitlab-ci.yml  2025-04-10-17-31-48.bag  README.html  README.md  USAGE.md  angles.csv  cicdSetup.md  depth_cam.py  detect_pose_depth_image.py  detect_pose_depth_video.py  detect_pose_image.py  detect_pose_image_matplot.py  detect_pose_video.py  first.py  matplotlib_static.py  matplotlib_video.py  please_have_a_Stroke.bag  points.txt  requirements.txt  result.txt  second.py  second_depth.py  third.py  videocapture.py
Demo1/: detect_pose_image_matplot.py  detect_pose_video.py  frame.txt
Demo1-files/: detect_pose_depth_video.py  detect_pose_video_matplot.py
Demo1-files/catkin_ws/src/: CMakeLists.txt
Demo1-files/lib/: draw.py  mp_util.py
Documents/: Demo_1_Debrief.pptx  Demo_2_Debrief.pptx  Research.txt
catkin_ws/: skeleton_image_data.txt
catkin_ws/src/skeleton_tracker/: CMakeLists.txt  package.xml
code/: requirements.txt
code/models/unitree_g1/: g1.xml
code/ros_ws/: README.md
ik/: g1_29dof_rev_1_0.urdf
lib/: depth_cam.py  landmark_util.py
ros_ws/: 6-col-demo2.csv  LANDMARKS.bag  README.md  angles.csv  dylans_angles.csv  goodwordisaac.csv  ik_joint_positions.csv  just_landmarks.bag  pose_pipeline_raw.bag  robot.launch  second-bowen.csv
ros_ws/demo2-csvs/: angles.csv
ros_ws/demo2-plots/: angles.csv
ros_ws/devel/: .catkin  .rosinstall
ros_ws/launch/: main.launch
ros_ws/rosbags/: PREPROCESSED.bag  TIMESTAMPED.bag  all_recorded.bag  calm.bag  demo2_1.bag  scaled_points_2025-04-10.bag  zachs-requested-bag.bag  zombie_pose.bag
(+154 files in other folders)
